fix: wrap overflow text in project card

--- a/style.css
+++ b/style.css
@@ -598,7 +598,7 @@ footer {
   .card-list .card {
     width: 100%;
     max-width: 100%;
-    /* max-height: 45%; */
+    height: auto;
   }
   .card .project-image-container {
     height: 60%;
